--- a/view/adminhtml/templates/test/index.phtml
+++ b/view/adminhtml/templates/test/index.phtml
@@ -668,10 +668,12 @@ $defaultTime = $now->format('H:i');
                 html += '<tr><td>Gross Price (Rounded)</td><td>' + pd.gross_rounded + ' PLN</td></tr>';
                 html += '<tr><td>Base Price (EUR)</td><td>' + pd.base_eur + ' EUR</td></tr>';
                 html += '<tr><td>Exchange Rate</td><td>' + resp.rate_eur_pln + '</td></tr>';
+                html += '<tr><td>Source</td><td><strong style="color:blue">Trans.eu API</strong></td></tr>';
             } else if (resp.prediction_pln) {
                 html += '<tr><td><strong>Final Price (Netto)</strong></td><td><strong style="color:#28a745; font-size:1.4em;">' + resp.prediction_pln + ' PLN</strong></td></tr>';
                 html += '<tr><td>Base Price (EUR)</td><td>' + (resp.prediction ? resp.prediction[0] : '-') + ' EUR</td></tr>';
                 html += '<tr><td>Exchange Rate</td><td>' + resp.rate_eur_pln + '</td></tr>';
+                html += '<tr><td>Source</td><td><strong style="color:blue">Trans.eu API</strong></td></tr>';
             } else {
                 html += '<tr><td><strong>Price</strong></td><td>' + (resp.prediction ? resp.prediction[0] : '-') + ' ' + resp.currency + '</td></tr>';
             }
